--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <meta name="theme-color" content="#111111" />
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" href="favicon.png" />
+        <link rel="manifest" href="manifest.json" />
         <script src="script.js" defer></script>
     </head>
     <body class="light">
