UI: Adjusted the default color in meta tag of index.html as well

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             content="https://jhzrmx.github.io/fancy-font-generator/preview.png"
         />
         <!-- Theme Color -->
-        <meta name="theme-color" content="#111111" />
+        <meta name="theme-color" content="#f8fafc" />
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" href="favicon.png" />
         <link rel="manifest" href="manifest.json" />
