UI: Make the title & input fields sticky and temporarily removed dark theme toggle

--- a/index.html
+++ b/index.html
@@ -48,19 +48,21 @@
     </head>
     <body class="light">
         <div class="container">
-            <header>
-                <h1>Fancy Font Generator</h1>
-                <button id="themeToggle">🌙</button>
-            </header>
-            <textarea
-                id="inputText"
-                placeholder="Type your text here..."
-            ></textarea>
-            <input
-                type="text"
-                id="searchInput"
-                placeholder="Search font name..."
-            />
+            <div class="sticky">
+                <header>
+                    <h1>Fancy Font Generator</h1>
+                    <button id="themeToggle">☀️</button>
+                </header>
+                <textarea
+                    id="inputText"
+                    placeholder="Type your text here..."
+                ></textarea>
+                <input
+                    type="text"
+                    id="searchInput"
+                    placeholder="Search font name..."
+                />
+            </div>
             <div id="fontList"></div>
         </div>
     </body>
